fix bug #47430 (Errors after writing to nodeValue parameter of an absent previousSibling) add test